--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Roboto+Slab:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <title>MPC por Thagama</title>
 </head>
 
 <body>
